--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
         </li>
         </div>
         <div *ngIf="!onlyOdd">
-          <li
+        <li
         class="list-group-item"
         [ngClass]="{odd: even % 2 !== 0}"
         [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'yellow' : 'transparent' }"
@@ -24,6 +24,17 @@
         {{ even }}
       </li>
     </div>
+    <ng-template [ngIf]="!onlyOdd">
+      <div>
+      <li
+        class="list-group-item"
+        [ngClass]="{odd: even % 2 !== 0}"
+        [ngStyle]="{backgroundColor: even % 2 !== 0 ? 'yellow' : 'transparent' }"
+        *ngFor="let even of evenNumbers">
+        {{ even }}
+      </li>
+      </div>
+    </ng-template>
       </ul>
       <p appBasicHighlight>Style me with basic directive!</p>
       <p [appBetterHighlight]="'red'" defaultColor="yellow">Style me with a better directive!</p>
